--- a/infos.html
+++ b/infos.html
@@ -3,23 +3,80 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>Infos</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="./css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h4>Adresse IP : 192.168.203.203</h4>
-        <h5>Chef de projet :</h5>
-        <li>
-            <ol> Gabriel Collet</ol>
-        </li>
-        <h5>Membre de l'équipe :</h5>
-        <li>
-            <ol> Alban Mérot</ol>
-            <ol> Alexi Ferrard</ol>
-            <ol> Elouann Bitauld</ol>
-            <ol> Nolan Bertel</ol>
-        </li>
+        <div class="p-4">
+            <div class="text-center">
+                <img src="images/logo_sae203_final.png" alt="Logo BreizhHardware" style="width: 14%; height: 7%;">   
+            </div>
+
+            <h4>Adresse IP : 192.168.203.203</h4>
+            <h5>Chef de projet :</h5>
+            <ul>
+                <ol> Gabriel Collet</ol>
+            </ul>
+            <h5>Membre de l'équipe :</h5>
+            <ul>
+                <ol> Alban Mérot</ol>
+                <ol> Alexi Ferrard</ol>
+                <ol> Elouann Bitauld</ol>
+                <ol> Nolan Bertel</ol>
+            </ul>
+            <table class ='table'>
+                <tr>
+                    <td>lot</td>
+                    <td>responsable</td>
+                    <td>participants</td>
+                    <td>avancements (%)</td>
+                    <td>commentaires</td>
+                </tr>
+                <tr>
+                    <td>serveur</td>
+                    <td>Alban Mérot</td>
+                    <td>
+                        <ul>
+                            <li> Gabriel Collet</li>
+                            <li>Alexi Ferrard</li>
+                            <li>Elouann Bitauld</li>
+                            <li>Nolan Bertel</li>
+                        </ul>
+                    </td>
+                    <td>0</td>
+                    <td>....</td>
+                </tr>
+                <tr>
+                    <td>....</td>
+                    <td>.....</td>
+                    <td>
+                        <ul>
+                            <li> Gabriel Collet</li>
+                            <li>Alexi Ferrard</li>
+                            <li>Elouann Bitauld</li>
+                            <li>Nolan Bertel</li>
+                        </ul>
+                    </td>
+                    <td>0</td>
+                    <td>....</td>
+                </tr>
+                <tr>
+                    <td>....</td>
+                    <td>.....</td>
+                    <td>
+                        <ul>
+                            <li> Gabriel Collet</li>
+                            <li>Alexi Ferrard</li>
+                            <li>Elouann Bitauld</li>
+                            <li>Nolan Bertel</li>
+                        </ul>
+                    </td>
+                    <td>0</td>
+                    <td>....</td>
+                </tr>
+            </table>
+        </div>
         <footer class=" text-center py-5 fixed-bottom">
             <small class="text-muted">© 2026 BreizhHardware - IUT Saint-Malo R&T</small>
         </footer>
